# url-shortener

./: .gitignore  IRONIC_README.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/configs/: config.py
backend/app/core/: logger.py
backend/app/databases/: db.py  redis.py
backend/app/mappers/: shortener_mapper.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 8e4cb4c86a15_create_shortened_urls_table.py
backend/app/repositories/: shortener_ropository.py
backend/app/routers/: routers.py  shortener_routers.py
backend/app/schemas/: shortener_schemas.py
backend/app/services/: shortener_redis_cache_services.py  shortener_services.py
backend/shared_models/: pyproject.toml
backend/shared_models/shared_models/kafka/: enums.py  url_validation.py
backend/shortener_service/: .env.exaple  Dockerfile  pyproject.toml
backend/shortener_service/app/: main.py
backend/shortener_service/app/core/: base_client.py  config.py  exceptions.py  lifespan.py  middleware.py  utils.py
backend/shortener_service/app/databases/: kafka.py  redis.py
backend/shortener_service/app/dependencies/: shortener_service.py
backend/shortener_service/app/interfaces/: shortener_interfaces.py
backend/shortener_service/app/mappers/: shortener_click_event_mapper.py  shortener_kafka_mapper.py  validation_kafka_mapper.py
backend/shortener_service/app/messaging/: kafka_consumer.py  kafka_producer.py  rabbit_producer.py
backend/shortener_service/app/migrations/: env.py
backend/shortener_service/app/models/: models.py
backend/shortener_service/app/repositories/: shortener_ropository.py
backend/shortener_service/app/routers/: shortener_admin_routes.py  shortener_admin_routes.py.py  shortener_routers.py
backend/shortener_service/app/schemas/: kafka_schemas.py  shortener_schemas.py
backend/statistics-service/: .env.example  README.md  package-lock.json  package.json
backend/statistics-service/src/: app.module.ts  main.ts  mongo.options.ts  rabbitmq.module.ts  rabbitmq.options.ts  url-click.consumer.ts
backend/url-validator/: .env.example  Dockerfile  README.md  pyproject.toml  shared_models
backend/url-validator/validator_app/: bootstrap.py  main.py
docker/: .env.example  (+9 more)
k8s/: Makefile  (+1 more)
(+54 files in other folders)
