[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["VladimirK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
asyncpg = "^0.30.0"
redis = "^5.2.1"
alembic = "^1.15.1"
python-dotenv = "^1.0.1"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
