[tool.poetry]
name = "shared-models"
version = "0.1.0"
description = "Common Pydantic models shared between services"
authors = ["Your Name <your@email.com>"]
packages = [{ include = "shared_models" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
